--- a/index.css
+++ b/index.css
@@ -1,23 +1,26 @@
 body{
     padding: 0px;
     margin: 0px;
-    overflow: hidden;
+    background-image: linear-gradient(to right , skyblue , rgb(74, 153, 184) , rgb(182, 28, 182) , rgb(150, 6, 150));
+    margin-top: 60px;
 }
-#main{
+/* main{
     display: flex;
-    /* text-align: center; */
+    text-align: center;
     width: 100%;
     height: 102vh;
     margin: auto;
     background-image: linear-gradient(to right , skyblue , rgb(74, 153, 184) , rgb(182, 28, 182) , rgb(150, 6, 150));
-}
+} */
 #box{
     margin: auto;
     width: 40%;
-    height: 80vh;
+    min-height: 80vh;
+    max-height: 220vh;
     background-color: black;
     opacity: 0.8;
     border-radius: 50px;
+    padding-bottom: 20px;
 }
 h1 {
     color: white;
@@ -63,20 +66,19 @@ li{
     padding-left: 10px;
     margin-bottom: 5px;
 }
-.done{
-    background-image: url(./checked.png);
+#edit{
+    background-image: url(./edit.png);
     background-position: center;
     background-size: cover;
     width: 7.5%;
     height: 4vh;
     border: none;
-    border-radius: 50%;
     position: absolute;
     right: 5px;
     top: 2px;
     /* margin-left: 20px; */
 }
-.delete{
+#delete{
     background-image: url(./remove.png);
     background-position: center;
     background-size: cover;
@@ -89,6 +91,18 @@ li{
     top: 2px;
     /* margin-left: 5px; */
 }
+#done{
+    background-image: url(./checked.png);
+    background-position: center;
+    background-size: cover;
+    border-radius: 50%;
+    width: 7.5%;
+    height: 4vh;
+    border: none;
+    position: absolute;
+    right: 65px;
+    top: 2px;
+}
 
 @media screen and (min-width: 200px) and (max-width:450px) {
     #box{
@@ -96,20 +110,40 @@ li{
     }
     input{
         position: relative;
-        left: 12px;
+        left: 35px;
         padding-left: 10px;
         font-size: 1rem;
+        width: 75%;
     }
     #btn{
         width: 9%;
         border-radius: 50%;
         position: relative;
         top: 18px;
-        left: -32px;
+        left: -10px;
     }
     ol{
         position: relative;
         right: 32px;
         bottom: 15px;
+    }
+    #edit{
+        width: 6%;
+        height: 2vh;
+    }
+    #done{
+        width: 6%;
+        height: 2vh;
+        position: absolute;
+        right: 20px;
+    }
+    #delete{
+        width: 6%;
+        height: 2vh;
+    }
+    li{
+        font-size: 1rem;
+        /* position: absolute;
+        right: 100px; */
     }
 }
